# mlops-zoomcamp2023

./: Makefile  prefect.yaml  pyproject.toml
notebooks/: duration-prediction.ipynb
prefect-scripts/: cat_dog_facts.py  cat_facts.py  orchestrate.py
scripts/: hpo.py  register_model.py  train.py
