[tool.poetry]
name = "mlops-zoomcamp2023"
version = "0.1.0"
description = ""
authors = ["Tobias Sterbak <sterbak-it@outlook.com>"]
readme = "README.md"
packages = [{include = "mlops_zoomcamp2023"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
