[tool.poetry]
name = "mlops-zoomcamp2023"
version = "0.1.0"
description = ""
authors = ["Tobias Sterbak <sterbak-it@outlook.com>"]
readme = "README.md"
packages = [{include = "mlops_zoomcamp2023"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
pyarrow = "^12.0.0"
fastparquet = "^2023.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
